logs/Interfaces_0.5.log
>>> 'Pkg.add("Interfaces")' log
INFO: Cloning cache of Interfaces from https://github.com/Rory-Finnegan/Interfaces.jl.git
INFO: Installing Interfaces v0.0.4
INFO: Building Interfaces
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c: In function ‘jl_type_mutable_union_append’:
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c:49:9: error: implicit declaration of function ‘jl_svec_append’ [-Werror=implicit-function-declaration]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
         ^
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c:49:32: error: initialization makes pointer from integer without a cast [-Werror]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
                                ^
cc1: all warnings being treated as errors
=============================[ ERROR: Interfaces ]==============================

LoadError: failed process: Process(`gcc -c -Wall -Werror -fPIC -I/home/vagrant/julia/bin/../include/julia /home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c -o /home/vagrant/.julia/v0.5/Interfaces/deps/usr/lib/mutable_union.o`, ProcessExited(1)) [1]
while loading /home/vagrant/.julia/v0.5/Interfaces/deps/build.jl, in expression starting on line 13

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: Interfaces had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.5
 - build the package(s) and all dependencies with `Pkg.build("Interfaces")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of Interfaces
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("Interfaces")' log
Julia Version 0.5.0-rc4+0
Commit 9c76c3e (2016-09-09 01:43 UTC)
Platform Info:
  System: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-95-generic #142-Ubuntu SMP Fri Aug 12 17:00:09 UTC 2016 x86_64 x86_64
Memory: 2.4471054077148438 GB (1252.7265625 MB free)
Uptime: 32103.0 sec
Load Avg:  0.9189453125  0.98291015625  1.03466796875
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3500 MHz    1819541 s       7747 s     182478 s     792365 s         63 s
#2  3500 MHz     793115 s         10 s     105266 s    2147713 s          3 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.7.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.5
2 required packages:
 - Interfaces                    0.0.4
 - JSON                          0.7.0
67 additional packages:
 - Anasol                        0.1.8
 - AxisAlgorithms                0.1.5
 - BIGUQ                         0.1.6
 - BinDeps                       0.4.5
 - BlackBoxOptim                 0.2.1
 - Blosc                         0.1.7
 - Calculus                      0.1.15
 - Codecs                        0.2.0
 - ColorTypes                    0.2.6
 - Colors                        0.6.6
 - Compat                        0.9.1
 - Compose                       0.4.4
 - Conda                         0.3.1
 - Contour                       0.2.0
 - DataArrays                    0.3.8
 - DataFrames                    0.8.3
 - DataStructures                0.4.5
 - Dates                         0.4.4
 - Distances                     0.3.2
 - Distributions                 0.10.2
 - Docile                        0.5.23
 - FactCheck                     0.4.3
 - FileIO                        0.1.2
 - FixedPointNumbers             0.1.4
 - FixedSizeArrays               0.2.3
 - Formatting                    0.1.5
 - ForwardDiff                   0.2.5
 - GZip                          0.2.20
 - Gadfly                        0.4.4
 - HDF5                          0.6.5
 - Hexagons                      0.0.4
 - Interpolations                0.3.6
 - Iterators                     0.1.10
 - JLD                           0.6.3
 - KernelDensity                 0.3.0
 - LaTeXStrings                  0.2.0
 - LegacyStrings                 0.1.1
 - Lexicon                       0.1.18
 - Loess                         0.0.7
 - Lora                          0.5.6
 - MacroTools                    0.3.2
 - Mads                          0.2.3              33972a53 (dirty)
 - Measures                      0.0.3
 - MetaProgTools                 0.1.4
 - NaNMath                       0.2.1
 - ODE                           0.2.1
 - Optim                         0.6.1
 - PDMats                        0.4.2
 - Polynomials                   0.1.0
 - PositiveFactorizations        0.0.2
 - ProgressMeter                 0.3.3
 - PyCall                        1.7.2
 - PyPlot                        2.2.2
 - Ratios                        0.0.4
 - Reexport                      0.0.3
 - ReusableFunctions             0.1.6
 - ReverseDiffSource             0.2.3
 - Rmath                         0.1.2
 - RobustPmap                    0.1.9
 - SHA                           0.2.1
 - Showoff                       0.0.7
 - SortingAlgorithms             0.1.0
 - StatsBase                     0.9.0
 - StatsFuns                     0.3.0
 - URIParser                     0.1.6
 - WoodburyMatrices              0.2.0
 - YAML                          0.1.10
INFO: Testing Interfaces
ERROR: LoadError: LoadError: could not load library "/home/vagrant/.julia/v0.5/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so"
/home/vagrant/.julia/v0.5/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so: cannot open shared object file: No such file or directory
 in dlopen(::String, ::UInt32) at ./libdl.jl:90 (repeats 2 times)
 in include_from_node1(::String) at ./loading.jl:488 (repeats 2 times)
 in process_options(::Base.JLOptions) at ./client.jl:262
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/Interfaces/test/../src/Interfaces.jl, in expression starting on line 8
while loading /home/vagrant/.julia/v0.5/Interfaces/test/runtests.jl, in expression starting on line 1
=============================[ ERROR: Interfaces ]==============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.5/Interfaces/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: Interfaces had test errors
 in #test#61(::Bool, ::Function, ::Array{AbstractString,1}) at ./pkg/entry.jl:740
 in (::Base.Pkg.Entry.#kw##test)(::Array{Any,1}, ::Base.Pkg.Entry.#test, ::Array{AbstractString,1}) at ./<missing>:0
 in (::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:31
 in cd(::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}}, ::String) at ./file.jl:59
 in #cd#1(::Array{Any,1}, ::Function, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./pkg/dir.jl:31
 in (::Base.Pkg.Dir.#kw##cd)(::Array{Any,1}, ::Base.Pkg.Dir.#cd, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./<missing>:0
 in #test#3(::Bool, ::Function, ::String, ::Vararg{String,N}) at ./pkg/pkg.jl:258
 in test(::String, ::Vararg{String,N}) at ./pkg/pkg.jl:258
 in eval(::Module, ::Any) at ./boot.jl:234
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318

>>> End of log
